discount section added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
         </div>
     </header>
     <main>
-       
+        <!-- Discount Section -->
+         <Section>
+            <h4 class="discount-text">65% OFF</h4>
+            <h5 class="discount-text-2">OUR HOLIDAY DEALS ARE BETTER</h5>
+            <p class="discount-text-3">ALL CATEGORIES</p>
+            <div class="new-year-img">
+                <img src="/resources/New Year Photo.png" alt="">
+            </div>
+         </Section>
     </main>
     <footer>
 
